clusters/arcanis/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:latest
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: media
          mountPath: /media
      volumes:
      - name: config
        hostPath:
          path: /storage/appdata/radarr/config
          type: Directory
      - name: movies
        hostPath:
          path: /storage/media/movies
          type: Directory
      - name: media
        hostPath:
          path: /storage/media
          type: Directory
